syntax = "proto3";

package comment;

import "google/protobuf/timestamp.proto";

service CommentService {
  rpc SaveComment(SaveCommentRequest) returns (SaveCommentResponse);
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc GetMoreComments(GetMoreCommentsRequest) returns (GetMoreCommentsResponse);
}

enum CommentBiz {
  COMMENT_UNKNOWN = 0;
  COMMENT_NOTE = 1;
  COMMENT_COMMENT = 2;
}

message SaveCommentRequest {
  int64 user_id = 1;
  CommentBiz biz = 2;
  int64 biz_id = 3;
  string content = 4;
  optional int64 root_id = 5;
  optional int64 parent_id = 6;
}

message SaveCommentResponse {
  Comment comment = 1;
}

message GetCommentsRequest {
  CommentBiz biz = 1;
  int64 biz_id = 2;
  int64 min_id = 3;
  int64 limit = 4;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}

message Comment {
  int64 id = 1;
  int64 user_id = 2;
  CommentBiz biz = 3;
  int64 biz_id = 4;
  string content = 5;
  optional int64 root_id = 6;
  optional int64 parent_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message DeleteCommentRequest {
  int64 id = 1;
}

message DeleteCommentResponse {}

// TODO: CHECK
message GetMoreCommentsRequest {
  int64 max_id = 1;
  int64 limit = 2;
}

message GetMoreCommentsResponse {
  repeated Comment comments = 1;
}
